--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class="kolkata">
-            <h4 class="text-uppercase">Kolkata</h4>
+            <h4 class="text-uppercase brand-brown-dark font-semibold">Kolkata</h4>
             <span>Ground floor, 3 Cooper street, Lane</span>
             <br>
             <span>opposite Pulse diagnostics, Near</span>
