--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -188,44 +188,54 @@
         <div class="growth-line"></div>
         <ul>
           <li>
-            <span class="growth-year">2004</span>
-            <span class="growth-number">316</span>
+            <span class="growth-year up">2004</span>
+            <div class="line-up"></div>
+            <span class="growth-number round">316</span>
           </li>
           <li>
-            <span class="growth-year">2005</span>
-            <span class="growth-number">470</span>
+            <span class="growth-year down">2005</span>
+            <div class="line-down"></div>
+            <span class="growth-number round">470</span>
           </li>
           <li>
-            <span class="growth-year">2006</span>
-            <span class="growth-number">795</span>
+            <span class="growth-year up">2006</span>
+            <div class="line-up"></div>
+            <span class="growth-number round">795</span>
           </li>
           <li>
-            <span class="growth-year">2007</span>
-            <span class="growth-number">913</span>
+            <span class="growth-year down">2007</span>
+            <div class="line-down"></div>
+            <span class="growth-number round">913</span>
           </li>
           <li>
-            <span class="growth-year">2008</span>
-            <span class="growth-number">1593</span>
+            <span class="growth-year up">2008</span>
+            <div class="line-up"></div>
+            <span class="growth-number round">1593</span>
           </li>
           <li>
-            <span class="growth-year">2009</span>
-            <span class="growth-number">316</span>
+            <span class="growth-year down">2009</span>
+            <div class="line-down"></div>
+            <span class="growth-number round">316</span>
           </li>
           <li>
-            <span class="growth-year">2010</span>
-            <span class="growth-number">1239</span>
+            <span class="growth-year up">2010</span>
+            <div class="line-up"></div>
+            <span class="growth-number round">1239</span>
           </li>
           <li>
-            <span class="growth-year">2011</span>
-            <span class="growth-number">1223</span>
+            <span class="growth-year down">2011</span>
+            <div class="line-down"></div>
+            <span class="growth-number round">1223</span>
           </li>
           <li>
-            <span class="growth-year">2012</span>
-            <span class="growth-number">1124</span>
+            <span class="growth-year up">2012</span>
+            <div class="line-up"></div>
+            <span class="growth-number round">1124</span>
           </li>
           <li>
-            <span class="growth-year">2013</span>
-            <span class="growth-number">749</span>
+            <span class="growth-year down">2013</span>
+            <div class="line-down"></div>
+            <span class="growth-number round">749</span>
           </li>
         </ul>
       </div>
@@ -233,10 +243,10 @@
   </div>
 
   <div class="care-programs">
-    <h3 class="text-center text-uppercase">Get to know more about our care programs:</h3>
-    <div class="care-buttons">
-      <a href="" class="btn btn-primary-inverse text-uppercase"><img src="" alt="" class="doneloading">Weight Loss</a>
-      <a href="" class="btn btn-primary-inverse text-uppercase"><img src="" alt="" class="doneloading">Health Management</a>
+    <h3 class="text-center text-uppercase brand-brown-dark font-semibold">Get to know more about our care programs:</h3>
+    <div class="care-buttons text-center">
+      <a href="" class="btn btn-primary-inverse text-uppercase font-semibold"><img src="img/packages/1.png" alt="" class="img-responsive">Weight Loss</a>
+      <a href="" class="btn btn-primary-inverse text-uppercase font-semibold"><img src="img/packages/2.png" alt="" class="img-responsive">Health Management</a>
     </div>
   </div>
 </section>
