--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -316,6 +316,79 @@
     font-weight: bold;
     letter-spacing: 5px;
   }
+  .growth-years {
+    position: relative;
+    letter-spacing: 2px;
+    .growth-line {
+      @include size(100%, 3px);
+      display: block;
+      @include position(absolute, 50% auto auto auto);
+      background-color: $brand-primary;
+      z-index: -1;
+    }
+    ul {
+      @include margin(60px 0);
+      li {
+        display: inline-block;
+        position: relative;
+        .growth-year {
+          @include position(absolute, auto auto auto 35%);
+          font-size: 16px;
+        }
+        .up { @include margin(-35px 0 0); }
+        .down { @include margin(90px 0 0); }
+        .line-up, .line-down {
+          @include size(2px, 10px);
+          display: block;
+          background-color: $brand-primary;
+        }
+        .line-up {
+          @include margin(-10px 0 0 0);
+          @include position(absolute, auto auto auto 50%);
+        }
+        .line-down {
+          @include margin(0 0 -10px 0);
+          @include position(absolute, auto auto 0 50%);
+        }
+        .growth-number {
+          @include size(75px, 75px);
+          @include margin(0 17px);
+          display: inline-block;
+          background-color: $body-bg;
+          text-align: center;
+          line-height: 75px;
+          font-size: 16px;
+          border: 2px solid $brand-primary;
+        }
+      }
+    }
+  }
+}
+.care-programs {
+  @include margin(0 0 100px 0);
+  h3 {
+    font-size: 32px;
+    letter-spacing: 5px;
+  }
+  .care-buttons {
+    @include margin(50px 0);
+    a {
+      @include size(280px, auto);
+      border: 2px solid $brand-primary;
+      text-align: left;
+      font-size: 15px;
+      letter-spacing: 2px;
+      img {
+        @include size(auto, 30px);
+        @include margin(0 50px 0 0);
+        display: inline-block;
+      }
+    }
+    a + a {
+      @include margin(0 0 0 20px);
+      img { @include margin(0 15px 0 0); }
+    }
+  }
 }
 
 // Contact Us
@@ -350,5 +423,23 @@
   .submit-button {
     @include margin(20px 0 0);
     a { @include padding(15px 70px); }
+  }
+}
+
+// Product Category
+.product-categories {
+  @include margin(0 0 50px);
+  .single-category {
+    @include margin(50px 0 0);
+    .category-image {
+      @include square(350px);
+      @include margin(0 auto);
+      overflow: hidden;
+      img { height: 100%; }
+    }
+    h3 {
+      @include padding(0 150px);
+      font-size: 32px;
+    }
   }
 }
