--- a/sass/main.scss
+++ b/sass/main.scss
@@ -168,6 +168,13 @@ $instagram: #396d9a !default;
     color: #fff !important;
   }
 }
+.btn-primary-inverse {
+  @include button-variant($brand-primary, white, $brand-primary);
+  &:hover {
+    background-color: $brand-primary;
+    color: white !important;
+  }
+}
 .foot-btn {
   @include button-variant($brand-primary, white, $brand-primary);
 }
