--- a/views/content/productcategory.html
+++ b/views/content/productcategory.html
@@ -1,12 +1,12 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
-    <h2 class="text-uppercase">Health Products</h2>
+    <img src="img/apple.jpg" alt="">
+    <h2 class="text-uppercase get-center white">Health Products</h2>
   </div>
 
   <div class="container">
-    <div class="product-detail get-up">
-      <p></p>
+    <div class="product-detail get-up brand-brown-bg white rel">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </div>
 
@@ -15,38 +15,38 @@
       <div class="row">
         <div class="col-md-6">
           <div class="single-category text-center">
-            <div class="category-image">
-              <img src="" alt="">
+            <div class="category-image round">
+              <img src="img/product_category/1.jpg" alt="" class="img-responsive">
             </div>
-            <h3 class="text-uppercase">Food Munchie &amp; Beverages</h3>
+            <h3 class="text-uppercase brand-primary font-semibold">Food Munchie &amp; Beverages</h3>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="single-category text-center">
-            <div class="category-image">
-              <img src="" alt="">
+            <div class="category-image round">
+              <img src="img/product_category/2.jpg" alt="" class="img-responsive">
             </div>
-            <h3 class="text-uppercase">Vitamins &amp; Minerals</h3>
+            <h3 class="text-uppercase brand-primary font-semibold">Vitamins &amp; Minerals</h3>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <div class="single-category text-center">
-            <div class="category-image">
-              <img src="" alt="">
+            <div class="category-image round">
+              <img src="img/product_category/3.jpg" alt="" class="img-responsive">
             </div>
-            <h3 class="text-uppercase">Protein Supplement</h3>
+            <h3 class="text-uppercase brand-primary font-semibold">Protein Supplement</h3>
           </div>
         </div>
 
         <div class="col-md-6">
           <div class="single-category text-center">
-            <div class="category-image">
-              <img src="" alt="">
+            <div class="category-image round">
+              <img src="img/product_category/4.jpg" alt="" class="img-responsive">
             </div>
-            <h3 class="text-uppercase">Books &amp; Gadgets</h3>
+            <h3 class="text-uppercase brand-primary font-semibold">Books &amp; Gadgets</h3>
           </div>
         </div>
       </div>
