--- a/views/content/healthproducts.html
+++ b/views/content/healthproducts.html
@@ -17,53 +17,53 @@
 
         <div class="col-md-3">
           <div class="product-cat">
-            <h3 class="text-uppercase">Categories</h3>
-            <a href="" class="btn btn-primary text-uppercase">Vitamins &amp; Minerals</a>
-            <a href="" class="btn btn-primary text-uppercase">Protein &amp; Supplement</a>
-            <a href="" class="btn btn-primary text-uppercase">Books &amp; Gadgets</a>
+            <h3 class="text-uppercase brand-brown-dark font-semibold">Categories</h3>
+            <a href="" class="btn text-uppercase brand-primary-bg white font-semibold">Vitamins &amp; Minerals</a>
+            <a href="" class="btn text-uppercase brand-primary-bg white font-semibold">Protein &amp; Supplement</a>
+            <a href="" class="btn text-uppercase brand-primary-bg white font-semibold">Books &amp; Gadgets</a>
           </div>
 
-          <div class="filters">
-            <h3 class="text-uppercase">Filters by</h3>
+          <div class="filters brand-brown-bg">
+            <h3 class="text-uppercase brand-brown-dark font-semibold">Filters by</h3>
 
             <div class="protein">
               <input type="checkbox">
-              <span>Protein Snacks</span>
+              <span class="white">Protein Snacks</span>
             </div>
 
             <div class="evening">
               <input type="checkbox">
-              <span>Evening Snacks</span>
+              <span class="white">Evening Snacks</span>
             </div>
 
             <div class="cookies">
               <input type="checkbox">
-              <span>Cookies</span>
+              <span class="white">Cookies</span>
             </div>
 
             <div class="nuts">
               <input type="checkbox">
-              <span>Nuts</span>
+              <span class="white">Nuts</span>
             </div>
 
             <div class="fiber">
               <input type="checkbox">
-              <span>Fiber Rich</span>
+              <span class="white">Fiber Rich</span>
             </div>
 
             <div class="teas">
               <input type="checkbox">
-              <span>Flavoured Teas</span>
+              <span class="white">Flavoured Teas</span>
             </div>
 
             <div class="burner">
               <input type="checkbox">
-              <span>Fat Burner</span>
+              <span class="white">Fat Burner</span>
             </div>
 
             <div class="chocolate">
               <input type="checkbox">
-              <span>Chocolates</span>
+              <span class="white">Chocolates</span>
             </div>
 
           </div>
@@ -73,24 +73,24 @@
           <div class="row">
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/1.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Baked Potato Chips</span> |
-                  <span><i class="fa fa-inr"></i> 225</span>
+                  <span><i class="fa fa-inr"></i>225</span>
                 </p>
                 <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
               </div>
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/2.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
@@ -99,11 +99,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/3.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
@@ -116,11 +116,11 @@
           <div class="row">
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/1.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
@@ -129,11 +129,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/2.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
@@ -142,11 +142,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/3.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
@@ -159,11 +159,11 @@
           <div class="row">
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/1.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
@@ -172,11 +172,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/2.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
@@ -185,11 +185,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/3.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
@@ -202,11 +202,11 @@
           <div class="row">
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/1.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Baked Potato Chips</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
@@ -215,11 +215,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/2.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Chana Jor</span> |
                   <span><i class="fa fa-inr"></i>125</span>
                 </p>
@@ -228,11 +228,11 @@
             </div>
 
             <div class="col-md-4">
-              <div class="single-product">
-                <div class="product-image">
-                  <img src="" alt="">
+              <div class="single-product text-center">
+                <div class="product-image round">
+                  <img src="img/health-products/3.jpg" alt="" class="img-responsive">
                 </div>
-                <p>
+                <p class="brand-primary font-semibold">
                   <span class="text-uppercase">Bajra Rings</span> |
                   <span><i class="fa fa-inr"></i>225</span>
                 </p>
