--- a/sass/main.scss
+++ b/sass/main.scss
@@ -809,7 +809,6 @@ button {
   }
 }
 //end Health-management////
-
 /////meet////
 .suman-video {
   width: 70%;
@@ -820,7 +819,6 @@ button {
 .speech {
   margin: 60px 0;
 }
-
 .about-suman {
   .heading {
     width: 44%;
@@ -845,6 +843,36 @@ button {
   margin-bottom: 60px;
 }
 ////end meet///
+//////faq/////
+.faq {
+  .banner {
+    h2 {
+      font-size: 40px;
+    }
+  }
+}
+.faq-accordion {
+  .panel-default {
+    border-color: $brand-brown;
+    border-radius: 8px;
+    margin: 20px 0;
+    .panel-body {
+      border: none !important;
+    }
+    .panel-heading {
+      border-color: $brand-brown;
+      border-radius: 6px;
+      padding: 0;
+      background-color: $brand-brown;
+      .panel-title a {
+        padding: 15px;
+        display: block;
+        color: $brand-brown-dark;
+      }
+    }
+  }
+}
+///end faq////
 ///////////////
 //Footer///////
 ///////////////
