--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -13,7 +13,7 @@
             How does the online program work? <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i>
           </accordion-heading>
           <div class="faq-descp">
-            <p>Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert nutritionists,
+            <p class="text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert nutritionists,
               who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
           </div>
         </accordion-group>
