--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -6,70 +6,73 @@
     </div>
   </div>
 
-  <div class="container">
-    <h4 class="text-uppercase brand-brown-dark">Items you would like to purchase</h4>
-
-    <div class="cart-table">
-      <table class="table">
-        <thead class="brand-brown-dark brand-brown-bg text-uppercase">
-          <tr>
-            <th class="text-center">Items</th>
-            <th class="text-center">Quantity</th>
-            <th class="text-center">Amount</th>
-            <th class="text-center">Total Amount</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="text-center" ng-repeat="product in cart">
-            <td>
-              <figure>
-                <div class="cart-imgholder m-center round">
-                <img ng-src="{{product.img}}" class="img-responsive">
-                </div>
-                <figcaption class="text-center text-uppercase">{{product.name}}</figcaption>
-              </figure>
-            </td>
-            <td>
-              <input type="number" class="text-center quantity" name="" id="" value="{{product.quantity}}" disabled>
-              <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
-              <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span>
-            </td>
-            <td>
-              <div class="cart-amount">
-              <p>Rs. {{product.amount}}</p>
-            </div>
-            </td>
-            <td>
-              <div class="cart-total-amount">
-              <p>Rs. {{product.totalamount}}</p>
-            </div>
-              <div class="clearfix">
-                <button class="btn btn-primary text-uppercase">Remove</button>
+  <div class="cart-main">
+    <div class="container">
+      <h3 class="text-uppercase brand-brown-dark letter-space">Items you would like to purchase</h3>
+      <div class="cart-table">
+        <table class="table">
+          <thead class="brand-brown-dark brand-brown-bg text-uppercase">
+            <tr>
+              <th class="text-center">Items</th>
+              <th class="text-center">Quantity</th>
+              <th class="text-center">Amount</th>
+              <th class="text-center">Total Amount</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="text-center" ng-repeat="product in cart">
+              <td>
+                <figure>
+                  <div class="cart-imgholder m-center round">
+                  <img ng-src="{{product.img}}" class="img-responsive">
+                  </div>
+                  <figcaption class="text-center text-uppercase">{{product.name}}</figcaption>
+                </figure>
+              </td>
+              <td>
+                <input type="number" class="text-center quantity" name="" id="" value="{{product.quantity}}" disabled>
+                <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
+                <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span>
+              </td>
+              <td>
+                <div class="cart-amount">
+                <p>Rs. {{product.amount}}</p>
               </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+              </td>
+              <td>
+                <div class="cart-total-amount">
+                <p>Rs. {{product.totalamount}}</p>
+              </div>
+                <div class="remove text-right">
+                  <button class="btn btn-primary text-uppercase">Remove</button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
 
-      <div class="cart-grand-total">
-        <span class="text-uppercase text-left">Grand Total</span>
-        <span class="text-right">Rs. 375.00</span>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6">
-          <p>Free shipping in Mumbai and Kolkata and India,</p>
-          <p>Shipping Charges applicable<sup>*</sup> for all other cities and countries.</p>
+        <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark">
+          <span class="text-uppercase pull-left">Grand Total</span>
+          <span class="pull-right text-uppercase">Rs. 375.00</span>
         </div>
-        <div class="col-md-6">
-          <div class="text-right">
-            <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
-            <a href="" class="btn btn-primary text-uppercase">Proceed to checkout</a>
+
+        <div class="shipping">
+          <div class="row">
+            <div class="col-md-6">
+              <p class="brand-primary">Free shipping in Mumbai and Kolkata and India,</p>
+              <p class="brand-primary">Shipping Charges applicable<sup>*</sup> for all other cities and countries.</p>
+            </div>
+            <div class="col-md-6">
+              <div class="text-right">
+                <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+                <a href="" class="btn btn-primary text-uppercase">Proceed to checkout</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
+    </div>
   </div>
 
 </section>
