--- a/views/content/home.html
+++ b/views/content/home.html
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="info  text-center">
+            <div class="info  text-center people-weight-count">
               <div class="inline-block v-top">
                 <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total
                   <span class="block count">Weight Loss</span>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="info  text-center">
+            <div class="info  text-center no-border">
               <div class="inline-block v-top">
                 <h5 class="text-uppercase text-bold  brand-brown-dark health-title">Presence in
                   <span class="block">Countries</span>
