--- a/sass/main.scss
+++ b/sass/main.scss
@@ -463,6 +463,15 @@ button {
   .v-top {
     vertical-align: top;
   }
+  .people-weight-count {
+    padding-right: 30px;
+  }
+  .info {
+    border-right: 2px solid $brand-brown-dark;
+  }
+  .no-border {
+    border: none;
+  }
 }
 .health-diet {
   padding: 80px 0;
