--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -1,25 +1,32 @@
 <section>
   <div class="selfcare-image">
-    <img src="" alt="">
+    <img src="img/apple.jpg" alt="">
   </div>
 
   <div class="container">
-    <div class="product-detail">
+    <div class="product-detail get-up brand-brown-bg rel">
       <div class="row">
         <div class="col-md-5">
           <div class="product-image">
-            <img src="" alt="" class="img-responsive doneloading">
+            <img src="img/cookies.jpg" alt="" class="img-responsive">
           </div>
         </div>
 
         <div class="col-md-7">
           <h3 class="text-uppercase">Baked Potato Chips</h3>
-          <ul class="nav nav-tabs">
+           <ul class="nav nav-tabs">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">Menu 1</a></li>
             <li><a href="#">Menu 2</a></li>
             <li><a href="#">Menu 3</a></li>
           </ul>
+          <tabset>
+            <tab>
+              <tab-heading>
+                <button type="button" class="btn btn-primary text-uppercase"><i class="fa fa-play-circle-o"></i> View Here</button>
+              </tab-heading>
+            </tab>
+          </tabset>
           <p></p>
           <p></p>
           <span><sup>*</sup>Gluten Free</span>
