--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -67,15 +67,15 @@
 
             <div class="row">
               <div class=" col-md-offset-1 col-md-10">
-                <div class="single-read text-center" ng-repeat="read in read1">
+                <div class="single-read text-center brand-brown-bg" ng-repeat="read in read1">
                   <div class="row">
                     <div class="col-md-8">
                       <div class="read-detail">
-                        <span class="text-left">{{read.title}}</span>
-                        <span class="text-right">{{read.name}}</span>
-                        <span class="text-right">{{read.location}}</span>
+                        <span class="text-left white">{{read.title}}</span>
+                        <span class="text-right brand-brown-dark">{{read.name}}</span>
+                        <span class="text-right white">{{read.location}}</span>
                         <hr>
-                        <p class="text-left" ng-bind-html="read.desc"></p>
+                        <p class="text-left brand-brown-dark" ng-bind-html="read.desc"></p>
                       </div>
                     </div>
 
@@ -95,7 +95,7 @@
 
             <div class="row">
               <div class=" col-md-offset-1 col-md-10">
-                <div class="read-story text-center" ng-repeat="read in read2">
+                <div class="read-story text-center brand-brown-bg" ng-repeat="read in read2">
                   <div class="row">
                     <div class="col-md-4">
                       <div class="read-image">
@@ -109,11 +109,11 @@
 
                     <div class="col-md-8">
                       <div class="read-detail">
-                        <span class="text-left">{{read.title}}</span>
-                        <span class="text-right">{{read.name}}</span>
-                        <span class="text-right">{{read.location}}</span>
+                        <span class="text-left white">{{read.title}}</span>
+                        <span class="text-right brand-brown-dark">{{read.name}}</span>
+                        <span class="text-right white">{{read.location}}</span>
                         <hr>
-                        <p class="text-left" ng-bind-html="read.desc"></p>
+                        <p class="text-left brand-brown-dark" ng-bind-html="read.desc"></p>
                       </div>
                     </div>
                   </div>
